5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4428/executions/1595_1446.log
== TEST (2019-03-26 07:57:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = float(input("Quantidade de litros comprados: "))
instituicao = var1-1/3, var%1/3
print(instituicao)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    instituicao = var1-1/3, var%1/3
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 07:58:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = float(input("Quantidade de litros comprados: "))
instituicao = var1-1/3, var%1/3
print(instituicao)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    instituicao = var1-1/3, var%1/3
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 07:59:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = float(input("Quantidade de litros comprados: "))
instituicao = var1-1/3, var%1/3
print(instituicao)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    instituicao = var1-1/3, var%1/3
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 07:59:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = float(input("Quantidade de litros comprados: "))
instituicao = var1-1/3, var%1/3
print(instituicao)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    instituicao = var1-1/3, var%1/3
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 07:59:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = float(input("Quantidade de litros comprados: "))
instituicao = var1-1/3, var%1/3
print(instituicao)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    instituicao = var1-1/3, var%1/3
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 08:00:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = float(input("Quantidade de litros comprados: "))
instituicao = var1-1/3, var%1/3
print(round(instituicao, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    instituicao = var1-1/3, var%1/3
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 08:00:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = float(input("Quantidade de litros comprados: "))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    instituicao = var1-1/3, var%1/3
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 08:01:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = float(input("Quantidade de litros comprados: "))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    instituicao = var1-1/3, var%1/3
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:24:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = float(input("Quantidade de litros comprados: "))
var2 = (var1-2/3)
print(round(var2, 3))

-- OUTPUT:
6.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:27:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = float(input("Quantidade de litros comprados: "))
var2 = (var1-2/3)
var3 = (var1-var2)
print(round(var3, 3))

-- OUTPUT:
0.667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:28:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = float(input("Quantidade de litros comprados: "))
var2 = (var1-2/3)
var3 = (var1-var2)
print(round(var3, 3))

-- EXECUTION TIME:
0.296628
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
0.667
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
0.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
0.667
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:30:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = float(input("Quantidade de litros comprados: "))
var2 = (var1/3)
print(round(var2, 3))

-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:30:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = float(input("Quantidade de litros comprados: "))
var2 = (var1/3)
print(round(var2, 3))

-- EXECUTION TIME:
0.149299
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
